[package]
name = "starknet_api"
version = "0.12.0-dev.1"
edition = "2021"
repository = "https://github.com/starkware-libs/starknet-api"
license = "Apache-2.0"
license-file = "LICENSE"
description = "Starknet Rust types related to computation and execution."

[features]
testing = []

[dependencies]
cairo-lang-starknet-classes = "2.6.0"
derive_more = "0.99.17"
hex = "0.4.3"
indexmap = { version = "2.1.0", features = ["serde"] }
once_cell = "1.17.1"
primitive-types = { version = "0.12.1", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.81"
starknet-crypto = "0.5.1"
starknet-types-core = { version = "0.0.11", features = ["hash"] }
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.31"

[dev-dependencies]
assert_matches = "1.5.0"
