[package]
name = "starknet_api"
version = "0.13.0-dev.4"
edition = "2021"
repository = "https://github.com/starkware-libs/starknet-api"
license = "Apache-2.0"
license-file = "LICENSE"
description = "Starknet Rust types related to computation and execution."

[features]
testing = []

[dependencies]
bitvec = "1.0.1"
cairo-lang-starknet-classes = "2.7.0-dev.0"
derive_more = "0.99.17"
hex = "0.4.3"
indexmap = { version = "2.1.0", features = ["serde"] }
itertools = "0.12.1"
once_cell = "1.17.1"
primitive-types = { version = "0.12.1", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.81"
sha3 = "0.10.8"
starknet-crypto = "0.5.1"
starknet-types-core = { version = "0.1.2", features = ["hash"] }
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.31"

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.17.0"
